# stryke-search

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
lib/: Search.stk
src/: lib.rs
t/: test_search.stk  test_stryke_search_surface.stk
tests/: surface.rs
