[package]
name = "stryke-search"
version = "0.3.0"
edition = "2021"
description = "Elasticsearch / OpenSearch cdylib for the stryke `search` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-search"
homepage = "https://menketechnologies.github.io/stryke-search/"
publish = false

[lib]
name = "stryke_search"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Blocking HTTP/JSON against the Elasticsearch/OpenSearch REST API. ureq is
# pure-Rust, sync, rustls-backed (no OpenSSL, no tokio) — vendorable and
# durable, matching the sync connection-cache model the redis cdylib uses.
ureq = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
